# mbf-bam-quantifier

./: .gitignore  Cargo.toml  LICENCE  Readme.md  flake.nix
.github/workflows/: release.yml
dev/: run_testcases.sh  todo.md
src/: bam_ext.rs  barcodes.rs  categorical.rs  config.rs  deduplication.rs  engine.rs  extractors.rs  filters.rs  gtf.rs  io.rs  lib.rs  main.rs  quantification.rs
src/deduplication/: basic.rs  singlecells.rs  umi.rs
src/engine/: chunked_genome.rs
src/quantification/: basic.rs  chunked_genome.rs  contig.rs  featurecounts.rs  references.rs  singlecells.rs  stranded.rs  umi.rs  unstranded.rs
src/quantification/featurecounts/: chunked_genome.rs  counters.rs
test_cases/: brief.py  extract_gtf_overlapping_feature.py  fix_stats.py
test_cases/basic/basic_no_gtf_set/: input.toml
test_cases/basic/basic_stranded_gene_is_contig/: input.gtf  input.toml
test_cases/basic/basic_stranded_gene_is_contig_reverse_direction/: input.toml
test_cases/basic/basic_unstranded_gene_is_contig/: ignore_subread.tsv  input.toml
test_cases/basic/basic_unstranded_gene_is_contig_incl_multimapper/: input.toml
test_cases/basic/test/: input.toml
test_cases/featurecounts/feature_counts_exon_level_stranded/: input.toml
test_cases/featurecounts/feature_counts_exon_level_stranded_reversed/: input.toml
test_cases/featurecounts/feature_counts_exon_level_unstranded/: input.bam  input.toml
test_cases/featurecounts/feature_counts_gene_level_stranded/: input.bam.bai  input.toml
test_cases/htseq/: info.txt
test_cases/reference/: input.toml
test_cases/reference_no_index/: expected_panic.txt  input.toml
test_cases/starSolo_targeted/: ignore_what.py  input.bam  input.bam.bai  input.gtf.zst  input.toml
(+219 files in other folders)
