[package]
name = "mbf-bam-quantifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
enum_dispatch = "0.3.13"
ex = "0.1.3"
human-panic = "2.0.2"
niffler = "3.0.0"
noodles = { version = "0.99.0", features = ["bam", "bgzf"] }
noodles-bgzf = "0.41.0"
rand = "0.9.1"
regex = "1.11.1"
serde = "1.0.219"
serde_valid = "1.0.5"
strum_macros = "0.27.1"
tempfile = "3.20.0"
toml = "0.8.23"

[[bin]]
name = "mbf-bam-quantifier-test-runner"
path = "src/bin/mbf-bam-quantifier-test-runner.rs"


