[package]
name = "mbf-bam-quantifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bio = "2.3.0"
csv = "1.3.1"
enum_dispatch = "0.3.13"
ex = "0.1.3"
human-panic = "2.0.2"
itertools = "0.14.0"
niffler = {version="3.0.0", default-features = false, features = ["gz", "zstd"]}
# we're not usin noodles, it doesn't have the convinience features of rust-htslib like record.blocks(), and 1 based is going to drive me insane. Actually, the whole query interface
# reads like 'this is going to be slower than htslib'
flate2 = {version = "1", features=["zlib-rs"]}



# noodles = { version = "0.99.0", features = ["sam", "bam", "bgzf"] }
# noodles-bgzf = "0.41.0"
# noodles-core = "0.17.0"
# noodles-csi = "0.49.0"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
rust-htslib = "0.49.0"
serde = "1.0.219"
serde_valid = "1.0.5"
strum_macros = "0.27.1"
tempfile = "3.20.0"
toml = "0.8.23"
noodles-gff = "0.50.0"
noodles-gtf = "0.45.0"
nom = "8.0.0"
memchr = "2.7.5"
linereader = "0.4.0"
string-interner = "0.19.0"

[[bin]]
name = "mbf-bam-quantifier-test-runner"
path = "src/bin/mbf-bam-quantifier-test-runner.rs"


